--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-avian2d = "0.2.1"
 bevy = "0.15.3"
-bevy_vello = "0.7.0"
+kayak_ui = "0.5.0"
 log = "0.4.26"
