--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,3 +2,10 @@
 channel = "1.85.0"
 components = ["rust-src", "rust-analyzer", "llvm-tools-preview"]
 profile = "default"
+targets = [
+  "aarch64-unknown-linux-gnu",
+  "x86_64-unknown-linux-gnu",
+  "aarch64-apple-darwin",
+  "x86_64-apple-darwin",
+  "wasm32-unknown-unknown",
+]
